# ethercat_motion_controller

./: .gitignore  .gitlab-ci.yml  Doxyfile  README.md
doxygen/: Doxyfile
lowlvl_communication/: CMakeLists.txt  package.xml
lowlvl_communication/include/lowlvl_communication/: ExampleNode (Kopie).hpp  ExampleNode.hpp
lowlvl_communication/launch/: any_node_example.launch
lowlvl_communication/param/: default_topics.yaml
lowlvl_communication/src/: ExampleNode (Kopie).cpp  ExampleNode.cpp  lowlvl_communication_node.cpp
openethercat_soem/: .clang_complete  .tags  package.xml
soem_interface/: CMakeLists.txt  package.xml
soem_interface/include/soem_interface/: EthercatBusBase.hpp  EthercatBusManagerBase.hpp  EthercatSlaveBase.hpp
soem_interface/src/soem_interface/: EthercatBusBase.cpp  EthercatBusManagerBase.cpp  EthercatSlaveBase.cpp
varileg_lowlevel_controller/: CMakeLists.txt  package.xml
varileg_lowlevel_controller/config/: config.yaml  joint_config.yaml
varileg_lowlevel_controller/include/varileg_lowlevel_controller/: ConversionTraits.hpp  DeviceState.hpp  EposCommandLibrary.hpp  EposConfigSetup.hpp  EposEthercatSlave.hpp  EposEthercatSlaveManager.hpp  EthercatNode.hpp  ExtendedJointState.hpp  MotorControllerState.hpp  OperatingMode.hpp  RxPdo.hpp  TxPdo.hpp  VarilegEthercatBusManager.hpp
varileg_lowlevel_controller/include/varileg_lowlevel_controller/entities/: DeviceState.hpp  EncoderCrosschecker.hpp  EposConfig.hpp  EposStartupConfig.hpp  HipEncoderCrosschecker.hpp  HomingMethod.hpp  HomingState.hpp  JointSpecifications.hpp  JointState.hpp  JointTrajectory.hpp  KneeEncoderCrosschecker.hpp  NoCheckEncoderCrosschecker.hpp  NoEncoderCrosschecker.hpp  NodeEncoderCrosschecker.hpp  OperatingMode.hpp  PositionUnitConverter.hpp  RxPdo.hpp  TxPdo.hpp
varileg_lowlevel_controller/include/varileg_lowlevel_controller/examples/: EposExampleNode.hpp
varileg_lowlevel_controller/launch/: epos_example.launch  epos_example_setcap.launch  test.launch  varileg_lowlevel_controller.launch  varileg_lowlevel_controller_setcap.launch
varileg_lowlevel_controller/src/: EposEthercatSlave.cpp  EposEthercatSlaveManager.cpp  EthercatNode.cpp  HipEncoderCrosscheck.cpp  HipEncoderCrosschecker.cpp  KneeEncoderCrosschecker.cpp  NoCheckEncoderCrosschecker.cpp  NoEncoderCrosschecker.cpp  NodeEncoderCrosschecker.cpp  VarilegEthercatBusManager.cpp  varileg_lowlevel_controller.cpp
varileg_lowlevel_controller/src/examples/: EposExampleNode.cpp  epos_example.cpp
varileg_lowlevel_controller_msgs/: CMakeLists.txt  package.xml
varileg_lowlevel_controller_msgs/msg/: ExtendedJointState.msg  ExtendedJointStates.msg  MotorControllerState.msg
