<?xml version="1.0"?>
<package format="2">
  <name>lowlvl_communication</name>
  <version>0.0.0</version>
  <description>The lowlvl_commuication package</description>

  <maintainer email="nick@todo.todo">nick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>varileg_msgs</depend>
  <depend>any_node</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
