<?xml version="1.0"?>

<package format="2">

  <name>soem_interface</name>
  <version>0.4.0</version>
  <description>C++ library to create multiple ethercat devices on one or multiple buses. Contains abstract base classes for the communication interface.</description>
  
  <license>Proprietary</license>

  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <author email="markus.staeuble@mavt.ethz.ch">Markus Staeuble</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>  
  <maintainer email="markus.staeuble@mavt.ethz.ch">Markus Staeuble</maintainer>
  
  <url type="website">https://bitbucket.org/leggedrobotics/soem_interface</url>
    
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_logger</depend>
  <depend>soem</depend>
  
</package>
